# wendy-lite

./: .gitignore  CMakeLists.txt  Cargo.toml  Package.swift  README.md  diagram.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c6  wokwi.toml
.github/workflows/: build.yml  promote-release.yml
Sources/CWendyLite/include/: wendy.h
Sources/WendyLite/: BLE.swift  GPIO.swift  I2C.swift  NeoPixel.swift  Network.swift  OTel.swift  RMT.swift  SPI.swift  Storage.swift  System.swift  Timer.swift  UART.swift  USB.swift  WendyLite.swift
components/wendy_app_usb/: CMakeLists.txt
components/wendy_app_usb/include/: wendy_app_usb.h
components/wendy_app_usb/src/: wendy_app_usb.c
components/wendy_ble/: CMakeLists.txt
components/wendy_ble/include/: wendy_ble.h
components/wendy_ble/src/: wendy_ble.c
components/wendy_ble_prov/: CMakeLists.txt
components/wendy_ble_prov/include/: wendy_ble_prov.h
components/wendy_ble_prov/src/: wendy_ble_prov.c
components/wendy_callback/: CMakeLists.txt
components/wendy_callback/include/: wendy_callback.h
components/wendy_callback/src/: wendy_callback.c
components/wendy_cloud_prov/: CMakeLists.txt
components/wendy_cloud_prov/include/: wendy_cloud_prov.h
components/wendy_cloud_prov/src/: wendy_cloud_prov.c
components/wendy_hal/: CMakeLists.txt  idf_component.yml
components/wendy_hal/include/: wendy_hal.h
components/wendy_hal/src/: wendy_hal_gpio.c  wendy_hal_i2c.c  wendy_hal_neopixel.c  wendy_hal_rmt.c  wendy_hal_timer.c
components/wendy_hal_export/: CMakeLists.txt  linker.lf
components/wendy_hal_export/include/: wendy_hal_export.h
components/wendy_hal_export/src/: wendy_hal_export.c  wendy_hal_export_gpio.c  wendy_hal_export_i2c.c  wendy_hal_export_neopixel.c  wendy_hal_export_rmt.c  wendy_hal_export_timer.c
components/wendy_net/: CMakeLists.txt
components/wendy_net/include/: wendy_net.h
components/wendy_net/src/: wendy_net.c
components/wendy_otel/: CMakeLists.txt
components/wendy_otel/include/: wendy_otel.h
components/wendy_otel/src/: wendy_otel.c
components/wendy_safety/: CMakeLists.txt
components/wendy_safety/include/: wendy_safety.h
components/wendy_safety/src/: wendy_safety.c
components/wendy_spi/: CMakeLists.txt
components/wendy_spi/include/: wendy_spi.h
components/wendy_spi/src/: wendy_spi.c
components/wendy_storage/: CMakeLists.txt
components/wendy_storage/include/: wendy_storage.h
components/wendy_storage/src/: wendy_storage.c
components/wendy_sys/: CMakeLists.txt
components/wendy_sys/include/: wendy_sys.h
components/wendy_sys/src/: wendy_sys.c
components/wendy_uart/: CMakeLists.txt
components/wendy_uart/include/: wendy_uart.h
components/wendy_uart/src/: wendy_uart.c
components/wendy_usb/: CMakeLists.txt
components/wendy_usb/include/: wendy_usb.h
components/wendy_usb/src/: wendy_usb.c
components/wendy_wasi_shim/: CMakeLists.txt
components/wendy_wasi_shim/include/: wendy_wasi_shim.h
components/wendy_wasi_shim/src/: wendy_wasi_shim.c
components/wendy_wasm/: CMakeLists.txt
components/wendy_wasm/include/: wendy_wasm.h
components/wendy_wasm/src/: wendy_wasm.c
components/wendy_wifi/: CMakeLists.txt  idf_component.yml
components/wendy_wifi/include/: wendy_wifi.h
components/wendy_wifi/src/: wendy_wifi.c
main/: CMakeLists.txt  Kconfig.projbuild  demo_wasm.h  idf_component.yml  wendy_main.c
src/: lib.rs
tools/: ble_provision.py  deploy.sh  wendy_serve.py
wasm_apps/: Makefile  build.sh  rust_blink.wasm  wasm2header.sh
wasm_apps/blink/: blink.c
wasm_apps/i2c_sensor/: i2c_sensor.c
wasm_apps/include/: wendy.h
wasm_apps/rust_blink/: Cargo.toml
wasm_apps/rust_blink/.cargo/: config.toml
wasm_apps/rust_blink/src/: lib.rs  wendy.rs
wasm_apps/swift_blink/: Package.resolved  Package.swift  wendy.json
wasm_apps/swift_blink/.wendy/cache/: package-info.json
wasm_apps/swift_blink/Sources/CWendy/include/: wendy.h
wasm_apps/swift_blink/Sources/SwiftBlink/: main.swift
wasm_apps/swift_display/: Package.swift  wendy.json
wasm_apps/swift_display/Sources/CWendy/: shim.c
wasm_apps/swift_display/Sources/CWendy/include/: wendy.h
wasm_apps/swift_display/Sources/SwiftDisplay/: main.swift
wasm_apps/ts_blink/: asconfig.json  package.json
wasm_apps/ts_blink/assembly/: index.ts
wasm_apps/wat_blink/: blink.wat
